--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
   },
   "devDependencies": {
     "@edx/browserslist-config": "^1.1.1",
-    "@edx/frontend-build": "11.0.2",
+    "@edx/frontend-build": "github:edunext/frontend-build#v11.0.2-cdn-support",
     "@edx/reactifex": "1.1.0",
     "babel-plugin-formatjs": "10.3.31",
     "enzyme": "3.11.0",
