--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
   },
   "devDependencies": {
     "@edx/browserslist-config": "^1.1.1",
-    "@edx/frontend-build": "github:edunext/frontend-build#ednx-release/css-variables",
+    "@edx/frontend-build": "github:eduNEXT/frontend-build#ednx-release/css-variables",
     "@edx/reactifex": "1.1.0",
     "babel-plugin-formatjs": "10.4.0",
     "enzyme": "3.11.0",
