--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
   "devDependencies": {
     "@edx/browserslist-config": "1.1.1",
     "@edx/reactifex": "1.1.0",
-    "@openedx/frontend-build": "github:edunext/frontend-build#bc/css-variables-13.1.4",
+    "@openedx/frontend-build": "github:edunext/frontend-build#ednx-release/css-variables-13.1.4",
     "babel-plugin-formatjs": "10.5.14",
     "eslint-plugin-import": "2.29.1",
     "glob": "7.2.3",
