--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "lint": "fedx-scripts eslint --ext .js --ext .jsx .",
     "snapshot": "fedx-scripts jest --updateSnapshot",
     "start": "fedx-scripts webpack-dev-server --progress",
-    "test": "fedx-scripts jest --coverage --passWithNoTests"
+    "test": "fedx-scripts jest --coverage --passWithNoTests",
+    "replace-variables": "paragon replace-variables -p src -t usage"
   },
   "husky": {
     "hooks": {
@@ -32,35 +33,35 @@
     "url": "https://github.com/openedx/frontend-app-authn/issues"
   },
   "dependencies": {
-    "@edx/brand": "npm:@openedx/brand-openedx@^1.2.2",
-    "@edx/frontend-platform": "7.1.3",
-    "@edx/openedx-atlas": "^0.6.0",
+    "@edx/brand": "npm:@openedx/brand-openedx@1.2.2",
+    "@edx/frontend-platform": "npm:@edunext/frontend-platform@7.1.2-alpha.1",
+    "@edx/openedx-atlas": "0.6.0",
     "@fortawesome/fontawesome-svg-core": "6.5.2",
     "@fortawesome/free-brands-svg-icons": "6.5.2",
     "@fortawesome/free-solid-svg-icons": "6.5.2",
     "@fortawesome/react-fontawesome": "0.2.0",
-    "@openedx/paragon": "^22.1.1",
-    "@optimizely/react-sdk": "^2.9.1",
+    "@openedx/paragon": "23.0.0-alpha.1",
+    "@optimizely/react-sdk": "2.9.1",
     "@redux-devtools/extension": "3.3.0",
-    "@testing-library/react": "^12.1.5",
-    "@testing-library/react-hooks": "^8.0.1",
-    "algoliasearch": "^4.14.3",
-    "algoliasearch-helper": "^3.14.0",
+    "@testing-library/react": "12.1.5",
+    "@testing-library/react-hooks": "8.0.1",
+    "algoliasearch": "4.14.3",
+    "algoliasearch-helper": "3.14.0",
     "classnames": "2.5.1",
     "core-js": "3.36.1",
     "fastest-levenshtein": "1.0.16",
     "form-urlencoded": "6.1.4",
     "prop-types": "15.8.1",
     "query-string": "7.1.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-helmet": "6.1.0",
     "react-loading-skeleton": "3.4.0",
     "react-redux": "7.2.9",
     "react-responsive": "8.2.0",
     "react-router": "6.22.3",
     "react-router-dom": "6.22.3",
-    "react-zendesk": "^0.1.13",
+    "react-zendesk": "0.1.13",
     "redux": "4.2.0",
     "redux-logger": "3.0.6",
     "redux-mock-store": "1.5.4",
@@ -71,15 +72,15 @@
     "universal-cookie": "4.0.4"
   },
   "devDependencies": {
-    "@edx/browserslist-config": "^1.1.1",
+    "@edx/browserslist-config": "1.1.1",
     "@edx/reactifex": "1.1.0",
-    "@openedx/frontend-build": "13.1.4",
+    "@openedx/frontend-build": "github:edunext/frontend-build#ednx-release/css-variables-13.1.4",
     "babel-plugin-formatjs": "10.5.14",
     "eslint-plugin-import": "2.29.1",
     "glob": "7.2.3",
     "history": "5.3.0",
     "husky": "7.0.4",
     "jest": "29.7.0",
-    "react-test-renderer": "^17.0.2"
+    "react-test-renderer": "17.0.2"
   }
 }
